                 SCons - a software construction tool

                            Change Log



RELEASE 0.97 - XXX

  From Chad Austin:

  - Allow Help() to be called multiple times, appending to the help
    text each call.

  From Steven Knight:

  - When compiling with Microsoft Visual Studio, don't include the ATL and
    MFC directories in the default INCLUDE and LIB environment variables.

  From Gary Oberbrunner:

  - Add an Environment.Dump() method to print the contents of a
    construction environment.

  - Allow $LIBS (and similar variables) to contain explicit File Nodes.

  - Change ParseConfig to add the found library names directly to the
    $LIBS variable, instead of returning them.

  - Add ParseConfig() support for the -framework GNU linker option.

  From Kevin Quick:

  - Fix the Builder name returned from ListBuilders and other instances
    of subclasses of the BuilderBase class.

  From Christoph Wiedemann:

  - Add an Environment.SetDefault() method that only sets values if
    they aren't already set.

  - Have the qt.py Tool not override variables already set by the user.

  - Add separate $QT_BINPATH, $QT_CPPPATH and $QT_LIBPATH variables
    so these can be set individually, instead of being hard-wired
    relative to $QTDIR.



RELEASE 0.96.1 - XXX

  From Craig Bachelor:

  - Handle white space in the executable Python path name within in MSVS
    project files by quoting the path.

  - Correct the format of a GUID string in a solution (.dsw) file so
    MSVS can correctly "build enable" a project.

  From Steven Knight:

  - Add a must_exist flag to Delete() to let the user control whether
    it's an error if the specified entry doesn't exist.  The default
    behavior is now to silently do nothing if it doesn't exist.

  - Package up the new Platform/darwin.py, mistakenly left out of 0.96.

  - Make the scons.bat REM statements into @REM so they aren't printed.

  - Make the SCons packaging SConscript files platform independent.
