@@ -96,29 +96,6 @@ class OptionsTestCase(unittest.TestCase):
         test_it('foo-bar')
         test_it('foo.bar')
 
-        save = {}
-        save['warn'] = SCons.Warnings.warn
-        save['DeprecatedWarning'] = SCons.Warnings.DeprecatedWarning
-        def warn(type, message, save=save):
-            save['type'] = type
-            save['message'] = message
-        SCons.Warnings.warn = warn
-        SCons.Warnings.DeprecatedWarning = "xyzzy"
-
-        try:
-            opts.Add('MISSPELLED',
-                     'test using the old validater keyword',
-                     "42",
-                     validater=check,
-                     converter=lambda x: int(x) + 12)
-        finally:
-            SCons.Warnings.DeprecatedWarning = save['DeprecatedWarning']
-            SCons.Warnings.warn = save['warn']
-        assert save['type'] == "xyzzy", save['type']
-        assert string.find(save['message'], "keyword of the Options.Add() method", save['message'] != -1), save['message']
-        o = opts.options[2]
-        o.validator(o.key, o.converter(o.default), {})
-
     def test_AddOptions(self):
         """Test adding a list of options to an Options object"""
         opts = SCons.Options.Options()
